BJS2-1491 review fixes