@@ -5,12 +5,11 @@ import org.springframework.stereotype.Component;
 import school.faang.user_service.entity.MentorshipRequest;
 import school.faang.user_service.dto.mentorship.MentorshipRequestDto;
 import school.faang.user_service.filter.mentorship.MentorshipRequestFilter;
-import school.faang.user_service.filter.mentorship.RequestFilterDto;
+import school.faang.user_service.dto.mentorship.filter.RequestFilterDto;
 import school.faang.user_service.mapper.mentorship.MentorshipRequestMapper;
 import school.faang.user_service.repository.mentorship.MentorshipRequestRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Component
@@ -22,11 +21,11 @@ public class MentorshipRequestService {
     private final MentorshipRequestMapper mentorshipRequestMapper;
 
     public List<MentorshipRequestDto> getRequests(RequestFilterDto filters) {
-        List<MentorshipRequest> mentorshipRequestList = StreamSupport.stream(mentorshipRequestRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+        List<MentorshipRequest> mentorshipRequest = StreamSupport.stream(
+                mentorshipRequestRepository.findAll().spliterator(), false).toList();
         mentorshipRequestFilters.stream()
                 .filter(filter -> filter.isApplicable(filters))
-                .forEach(filter -> filter.apply(mentorshipRequestList, filters));
-        return mentorshipRequestMapper.toDtoList(mentorshipRequestList);
+                .forEach(filter -> filter.apply(mentorshipRequest, filters));
+        return mentorshipRequestMapper.toDtoList(mentorshipRequest);
     }
 }
